@@ -91,6 +91,9 @@ mixed *tests = ({
     ({ "b-990210", 0, (: terminal_colour("foobar bla", ([ ]), 9, 2)=="foobar\n  bla" :) }),
     ({ "sprintf-INT_MIN", 0, (: sprintf("%Q",__INT_MIN__) == to_string(__INT_MIN__) :) }),
     ({ "send_udp leak", 0, (: funcall(bind_lambda(#'send_udp, unpriv), "127.0.0.1",9999, ({ 1 })); return 1; :) }),
+    ({ "present_clone string corruption", 0,
+       (: string a="item#123"; present_clone(a); return a[4..]=="#123"; :)
+    }),
 });
 
 void run_test()
