@@ -4,6 +4,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
 23-Jun-2009 (Gnomi)
   - Corrected a memory leak in send_udp.
     (comm.c)
+  - String corruption by present_clone.
+    (efuns.c)
 
 18-Jun-2009 (Zesstra)
   - The data from the bytecode is not written/read byte per byte and
